--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,20 +23,18 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/prices}" th:text="#{header.navbar.menu_prices}"></a></li>
-                        <li><a href="#" th:href="@{/price/new}" th:text="#{header.navbar.menu_add_price}"></a></li>
+                        <!--<li><a href="#" th:href="@{/prices}" th:text="#{header.navbar.menu_prices}"></a></li>-->
+                        <!--<li><a href="#" th:href="@{/price/new}" th:text="#{header.navbar.menu_add_price}"></a></li>-->
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                                th:text="#{header.navbar.menu_references}"></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Действие</a></li>
-                                <li><a href="#">Другое действие</a></li>
-                                <li><a href="#">Что-то еще</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Отдельная ссылка</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Еще одна отдельная ссылка</a></li>
+                                <li><a href="#" th:text="#{header.navbar.dropdown_item1}"></a></li>
+                                <li><a href="#" th:href="@{/prices}" th:text="#{header.navbar.dropdown_item2}"></a></li>
+                                <li><a href="#" th:href="@{/units}" th:text="#{header.navbar.dropdown_item3}"></a></li>
+                                <!--<li class="divider"></li>-->
+                                <!--<li><a href="#">Отдельная ссылка</a></li>-->
                             </ul>
                         </li>
                     </ul>
