--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -2,20 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en" th:fragment="head">
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
             th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 
     <script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/js/bootstrap.min.js"
             th:src="@{/webjars/bootstrap/3.3.4/js/bootstrap.min.js}"></script>
 
-
-    <link href="../static/css/buh.css"
+    <link href="/static/css/buh.css"
           th:href="@{/css/buh.css}" rel="stylesheet" media="screen"/>
-
 </head>
 <body>
 
