--- a/src/main/resources/templates/priceform.html
+++ b/src/main/resources/templates/priceform.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Add Prices</title>
+    <title th:text="#{priceform.title}"></title>
 
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
@@ -10,19 +10,43 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2>Price Details</h2>
+    <h2 th:text="#{priceshow.h2}"></h2>
     <div>
         <form class="form-horizontal" th:object="${price}" th:action="@{/price}" method="post">
             <input type="hidden" th:field="*{id}"/>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Name:</label>
+                <label class="col-sm-2 control-label" th:text="#{column.name} + ':'">Name</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{name}"/>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{column.unit} + ':'">Unit</label>
+                <div class="col-sm-10">
+                    <select class="form-control" th:field="*{unit}">
+                        <!--<option selected="selected" disabled="disabled" th:text="#{column.placeholder}" value=""></option>-->
+                        <option th:text="#{column.placeholder}" value=""></option>
+                        <option th:each="unit : ${units}" th:value="${unit.name}" th:text="${unit.name}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{price.type} + ':'">Price type</label>
+                <div class="col-sm-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" th:field="*{isCalculated}" value="true" th:text="#{price.type.calculated}"/>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{price.type} + ':'"
+                       th:if="${ #lists.isEmpty(prod.comments)}">Price type</label>
 
+            </div>
             <div class="row">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default" th:text="#{button.submit}"></button>
             </div>
         </form>
     </div>
