--- a/src/main/resources/templates/priceshow.html
+++ b/src/main/resources/templates/priceshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Price Info</title>
+    <title th:text="#{priceshow.title}"></title>
 
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
@@ -10,23 +10,32 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2>Price Details</h2>
+    <h2 th:text="#{priceshow.h2}"></h2>
     <div>
         <form class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-2 control-label">Price Id:</label>
+                <label class="col-sm-2 control-label" th:text="#{column.id} + ':'"></label>
                 <div class="col-sm-10">
-                    <p class="form-control-static" th:text="${price.id}">Price Id</p></div>
+                    <p class="form-control-static" th:text="${price.id}">Id</p></div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Price Name:</label>
+                <label class="col-sm-2 control-label" th:text="#{column.name} + ':'"></label>
                 <div class="col-sm-10">
-                    <p class="form-control-static" th:text="${price.name}">description</p>
+                    <p class="form-control-static" th:text="${price.name}">Name</p>
                 </div>
             </div>
-
-
-
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{column.unit} + ':'"></label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${price.unit}">Unit</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{price.type.calculated} + ':'"></label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${price.isCalculated}">isCalculated</p>
+                </div>
+            </div>
         </form>
     </div>
 </div>
