--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -13,8 +13,8 @@
     <script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/js/bootstrap.min.js"
             th:src="@{/webjars/bootstrap/3.3.4/js/bootstrap.min.js}"></script>
 
-    <link href="/static/css/buh.css"
-          th:href="@{/css/buh.css}" rel="stylesheet" media="screen"/>
+    <!--<link href="/static/css/buh.css"-->
+          <!--th:href="@{/css/buh.css}" rel="stylesheet" media="screen"/>-->
 </head>
 <body>
 
