--- a/src/main/resources/templates/priceform.html
+++ b/src/main/resources/templates/priceform.html
@@ -40,11 +40,11 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label" th:text="#{price.type} + ':'"
-                       th:if="${ #lists.isEmpty(prod.comments)}">Price type</label>
+            <!--<div class="form-group">-->
+                <!--<label class="col-sm-2 control-label" th:text="#{price.type} + ':'"-->
+                       <!--th:if="${ #lists.isEmpty(prod.comments)}">Price type</label>-->
 
-            </div>
+            <!--</div>-->
             <div class="row">
                 <button type="submit" class="btn btn-default" th:text="#{button.submit}"></button>
             </div>
