--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -7,10 +7,10 @@
           th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
 
-     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+     <script type="text/javascript" src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
             th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 
-    <script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/js/bootstrap.min.js"
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/js/bootstrap.min.js"
             th:src="@{/webjars/bootstrap/3.3.4/js/bootstrap.min.js}"></script>
 
     <!--<link href="/static/css/buh.css"-->
