--- a/src/main/resources/templates/priceform.html
+++ b/src/main/resources/templates/priceform.html
@@ -10,7 +10,7 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2 th:text="#{priceshow.h2}"></h2>
+    <h2 th:text="#{priceshow.add}"></h2>
     <div>
         <form class="form-horizontal" th:object="${price}" th:action="@{/price}" method="post">
             <input type="hidden" th:field="*{id}"/>
@@ -23,9 +23,10 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" th:text="#{column.unit} + ':'">Unit</label>
                 <div class="col-sm-10">
-                    <select class="form-control" th:field="*{unit}">
+                    <!--<select class="form-control" th:field="*{unit}">-->
+                    <select class="form-control" name="unit">
                         <!--<option selected="selected" disabled="disabled" th:text="#{column.placeholder}" value=""></option>-->
-                        <option th:text="#{column.placeholder}" value=""></option>
+                        <option th:selected="selected" th:disabled="disabled" th:text="#{column.placeholder}" value=""></option>
                         <option th:each="unit : ${units}" th:value="${unit.name}" th:text="${unit.name}"></option>
                     </select>
                 </div>
@@ -35,21 +36,30 @@
                 <div class="col-sm-10">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" th:field="*{isCalculated}" value="true" th:text="#{price.type.calculated}"/>
+                            <input type="checkbox" id="is_calculated" onchange="showCalculatedField()" th:field="*{isCalculated}" value="true" th:text="#{price.type.calculated}"/>
                         </label>
                     </div>
                 </div>
             </div>
-            <!--<div class="form-group">-->
-                <!--<label class="col-sm-2 control-label" th:text="#{price.type} + ':'"-->
-                       <!--th:if="${ #lists.isEmpty(prod.comments)}">Price type</label>-->
 
-            <!--</div>-->
+            <div class="form-group" id="calculated" style="display:none">
+                <label class="col-sm-2 control-label" th:text="#{price.type} + ':'"></label>
+            </div>
+
             <div class="row">
                 <button type="submit" class="btn btn-default" th:text="#{button.submit}"></button>
             </div>
         </form>
     </div>
 </div>
+
+<script type="text/javascript">
+    function showCalculatedField() {
+        if ($('#is_calculated').is(':checked'))
+            $('#calculated').show();
+        else
+            $('#calculated').hide();
+    }
+</script>
 </body>
 </html>
