--- a/src/main/resources/templates/unitform.html
+++ b/src/main/resources/templates/unitform.html
@@ -10,7 +10,7 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2 th:text="#{unitshow.h2}"></h2>
+    <h2 th:text="#{unitshow.add}"></h2>
     <div>
         <form class="form-horizontal" th:object="${unit}" th:action="@{/unit}" method="post">
             <input type="hidden" th:field="*{id}"/>
