--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,18 +15,22 @@
     </div>
 
     <form class="form-horizontal" th:action="@{/login}" method="post">
+        <div class="form-group">
+            <label class="col-sm-2 control-label" th:text="#{login.username}+' :'"></label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="username"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" th:text="#{login.password}+' :'"></label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" name="password"/>
+            </div>
+        </div>
 
-        <table class="table table-stripped">
-            <tr>
-                <td><label th:text="#{login.username}+' '"></label> <input type="text" name="username"/></td>
-            </tr>
-            <tr>
-                <td><label th:text="#{login.password}+' '"> </label> <input type="password" name="password"/></td>
-            </tr>
-            <tr>
-                <td><button type="submit" class="btn btn-default" th:text="#{login.button}"></button> </td>
-            </tr>
-        </table>
+        <div class="row">
+            <button type="submit" class="btn btn-default" th:text="#{login.button}"></button>
+        </div>
     </form>
 </div>
 </body>
