--- a/src/main/resources/templates/priceform.html
+++ b/src/main/resources/templates/priceform.html
@@ -5,6 +5,33 @@
     <title th:text="#{priceform.title}"></title>
 
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
+
+    <script type="text/javascript">
+
+        jQuery(document).ready(function () {
+            if ($('#is_calculated').is(':checked')) {
+                $('#calculated').css('display', 'block');
+            } else {
+                $('#calculated').css('display', 'none');
+            }
+
+            $('#is_calculated').change(function () {
+                if (this.checked)
+                    $('#calculated').show();
+                else
+                    $('#calculated').hide();
+
+            });
+
+        });
+        //        function showCalculatedField() {
+        //            if ($('#is_calculated').is(':checked'))
+        //                $('#calculated').show();
+        //            else
+        //                $('#calculated').hide();
+        //        }
+    </script>
+
 </head>
 <body>
 <div class="container">
@@ -26,24 +53,42 @@
                     <!--<select class="form-control" th:field="*{unit}">-->
                     <select class="form-control" name="unit">
                         <!--<option selected="selected" disabled="disabled" th:text="#{column.placeholder}" value=""></option>-->
-                        <option th:selected="selected" th:disabled="disabled" th:text="#{column.placeholder}" value=""></option>
+                        <option th:selected="selected" th:disabled="disabled" th:text="#{select.unit}"
+                                value=""></option>
                         <option th:each="unit : ${units}" th:value="${unit.name}" th:text="${unit.name}"></option>
                     </select>
                 </div>
             </div>
+
             <div class="form-group">
                 <label class="col-sm-2 control-label" th:text="#{price.type} + ':'">Price type</label>
                 <div class="col-sm-10">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" id="is_calculated" onchange="showCalculatedField()" th:field="*{isCalculated}" value="true" th:text="#{price.type.calculated}"/>
+                            <!--<input type="checkbox" id="is_calculated" onchange="showCalculatedField()"-->
+                            <input type="checkbox" id="is_calculated"
+                                   th:field="*{isCalculated}" value="true" th:text="#{price.type.calculated}"/>
                         </label>
                     </div>
                 </div>
             </div>
 
-            <div class="form-group" id="calculated" style="display:none">
-                <label class="col-sm-2 control-label" th:text="#{price.type} + ':'"></label>
+            <!--<div class="form-group" id="calculated" style="display:none">-->
+            <div class="form-group" id="calculated">
+                <label class="col-sm-2 control-label" th:text="#{price.type.base} + ':'"></label>
+                <div class="col-sm-10">
+                    <select class="form-control" name="base_price_id">
+                        <!--<option selected="selected" disabled="disabled" th:text="#{column.placeholder}" value=""></option>-->
+                        <option th:selected="selected" th:disabled="disabled" th:text="#{select.base_price}"
+                                value=""></option>
+                        <option th:each="price : ${prices}" th:value="${price.id}" th:text="${price.name}"></option>
+                    </select>
+                </div>
+
+                <label class="col-sm-2 control-label" th:text="#{price.type.base} + ':'"></label>
+                <div class="col-sm-10">
+
+                </div>
             </div>
 
             <div class="row">
@@ -53,13 +98,6 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    function showCalculatedField() {
-        if ($('#is_calculated').is(':checked'))
-            $('#calculated').show();
-        else
-            $('#calculated').hide();
-    }
-</script>
+
 </body>
 </html>
