--- a/src/main/resources/templates/priceshow.html
+++ b/src/main/resources/templates/priceshow.html
@@ -13,11 +13,7 @@
     <h2 th:text="#{priceshow.h2}"></h2>
     <div>
         <form class="form-horizontal">
-            <div class="form-group">
-                <label class="col-sm-2 control-label" th:text="#{column.id} + ':'"></label>
-                <div class="col-sm-10">
-                    <p class="form-control-static" th:text="${price.id}">Id</p></div>
-            </div>
+
             <div class="form-group">
                 <label class="col-sm-2 control-label" th:text="#{column.name} + ':'"></label>
                 <div class="col-sm-10">
@@ -34,6 +30,18 @@
                 <label class="col-sm-2 control-label" th:text="#{price.type.calculated} + ':'"></label>
                 <div class="col-sm-10">
                     <p class="form-control-static" th:text="${price.isCalculated}">isCalculated</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{price.type.base} + ' Id :'"></label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${price.base_price_id}"></p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{price.type_multipler} + ':'"></label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${price.multipler}"></p>
                 </div>
             </div>
         </form>
