--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,20 +16,20 @@
 
     <form class="form-horizontal" th:action="@{/login}" method="post">
         <div class="form-group">
-            <label class="col-sm-2 control-label" th:text="#{login.username}+' :'"></label>
+            <label class="col-sm-2 control-label" th:text="#{login.username}+':'"></label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="username"/>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label" th:text="#{login.password}+' :'"></label>
+            <label class="col-sm-2 control-label" th:text="#{login.password}+':'"></label>
             <div class="col-sm-10">
                 <input type="password" class="form-control" name="password"/>
             </div>
         </div>
 
         <div class="row">
-            <button type="submit" class="btn btn-default" th:text="#{login.button}"></button>
+            <button type="submit" class="btn btn-default" th:text="#{login}"></button>
         </div>
     </form>
 </div>
