--- a/src/main/resources/templates/productform.html
+++ b/src/main/resources/templates/productform.html
@@ -66,11 +66,36 @@
                     <input type="text" class="form-control" th:field="${product.name}"/>
                 </div>
             </div>
-            <!--  Список цен у номенклатуры -->
+            <!--Список цен у номенклатуры -->
             <div class="form-group">
-                <label class="col-sm-2 control-label" th:text="#{productform.prices}+':'">Prices: </label>
-                <div class="col-sm-10" th:each="price : ${product.prices}" th:text="${price.name}"></div>
+                <label class="col-sm-2 control-label" th:text="#{productform.prices}+':'">Prices</label>
+                <div class="col-sm-10">
+                    <div class="row" th:each="productPrice : ${product.productPrices}">
+                        <div class="col-md-2" th:text="${productPrice.price.name}">Price Name</div>
+                        <div class="col-md-2" th:text="${productPrice.value}">Price Value</div>
+                    </div>
+                </div>
             </div>
+
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label" th:text="#{productform.prices}+':'">Prices: </label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<table id="pricesTable" class="table table-striped">-->
+            <!--<thead>-->
+            <!--<tr>-->
+            <!--<th>Price</th>-->
+            <!--<th>Value</th>-->
+            <!--</tr>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr th:each="productPrice : ${product.productPrices}">-->
+            <!--<td th:text="${productPrice.price.name}">Price Name</td>-->
+            <!--<td th:text="${productPrice.value}">Price Value</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+            <!--</table>-->
+            <!--</div>-->
+            <!--</div>-->
 
 
             <div class="form-group">
@@ -85,6 +110,14 @@
                         <option class="form-control input-sm" th:each="price : ${prices}"
                                 th:value="${price.id}" th:text="${price.name}"></option>
                     </select>
+
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label" th:text="#{column.value}+':'">Value</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="value"/>
                 </div>
             </div>
 
